# generalsetup

./: .gitignore  README.md
Cpp/: README.md
Cpp/cmake/: README.md
Cpp/cmake/basic/: CMakeLists.txt  anotherSourceFile.cpp  someExecutable.cpp
Cpp/cmake/basicWithLibrary/: BWLConfig.h.in  CMakeLists.txt  main.cpp
Cpp/cmake/basicWithLibrary/LibraryFolder/: CMakeLists.txt  libraryFunctions.cpp  libraryName.h
Cpp/cmake/crossLinkedLibs/: CMakeLists.txt  main.cpp
Cpp/cmake/crossLinkedLibs/Lib1/: CMakeLists.txt  lib1func1.h  lib1func2.h
Cpp/cmake/crossLinkedLibs/Lib2/: CMakeLists.txt  lib2func1.cpp  lib2func1.h  lib2func2.cpp  lib2func2.h
LaTex/: README.md
Linux/: README.md
